# ManiView

./: .gitignore  CMakeLists.txt  GraphicsView.cpp  GraphicsView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ViewerApplication.cpp  ViewerApplication.h  main.cpp
mac/: Info.plist.in  icon.icns
